--- a/RichTextCleanerUwp/MainPage.xaml
+++ b/RichTextCleanerUwp/MainPage.xaml
@@ -8,6 +8,7 @@
     xmlns:cvt="using:RichTextCleanerUwp.Converters"
     mc:Ignorable="d"
     KeyDown="Page_KeyDown"
+    
     >
     <Page.Background>
         <AcrylicBrush BackgroundSource="HostBackdrop" FallbackColor="WhiteSmoke" 
@@ -18,7 +19,8 @@
         <cvt:HtmlToSyntaxHighlightConverter x:Key="SyntaxHighlighter" />
         <Style x:Key="CommandButton" TargetType="Button" BasedOn="{StaticResource ButtonRevealStyle}">
             <Setter Property="Margin" Value="2,10"/>
-            <Setter Property="Background" Value="DarkGray"/>
+            <Setter Property="Background" Value="#40000000"/>
+            <Setter Property="Foreground" Value="Black"/>
             <Setter Property="Width" Value="150"/>
         </Style>
     </Page.Resources>
