--- a/RichTextCleanerUwp/App.xaml
+++ b/RichTextCleanerUwp/App.xaml
@@ -2,7 +2,8 @@
     x:Class="RichTextCleanerUwp.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:RichTextCleanerUwp">
+    xmlns:local="using:RichTextCleanerUwp"
+    RequestedTheme="Light">
     <Application.Resources>
         <Style x:Key="CommandButton" TargetType="Button" BasedOn="{StaticResource ButtonRevealStyle}">
             <Setter Property="Margin" Value="2,10"/>
