--- a/RichTextCleanerUwp/Forms/LinkCheckerWindow.xaml
+++ b/RichTextCleanerUwp/Forms/LinkCheckerWindow.xaml
@@ -12,13 +12,13 @@
     <Page.Resources>
         <cvt:LinkResultToDisplayTextConverter x:Key="ResultToDisplay" />
     </Page.Resources>
-    <Grid>
+    <Grid Background="#F0F0F0">
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition Height="30"/>
             <RowDefinition Height="35"/>
         </Grid.RowDefinitions>
-        <ListView x:Name="LinkList" ItemsSource="{x:Bind Links}">
+        <ListView x:Name="LinkList" ItemsSource="{x:Bind Links}" Background="White">
             <ListView.HeaderTemplate>
                 <DataTemplate>
                     <Grid>
@@ -31,13 +31,20 @@
                             <ColumnDefinition Width="50" />
                             <ColumnDefinition />
                         </Grid.ColumnDefinitions>
-                        <TextBlock Style="{ThemeResource CaptionTextBlockStyle}" Grid.Column="0" Text="Text"/>
-                        <TextBlock Style="{ThemeResource CaptionTextBlockStyle}" Grid.Column="1" Text="Old URL"/>
-                        <TextBlock Style="{ThemeResource CaptionTextBlockStyle}" Grid.Column="2" Text="Update"/>
-                        <TextBlock Style="{ThemeResource CaptionTextBlockStyle}" Grid.Column="3" Text="Mark"/>
-                        <TextBlock Style="{ThemeResource CaptionTextBlockStyle}" Grid.Column="4" Text="Result"/>
-                        <TextBlock Style="{ThemeResource CaptionTextBlockStyle}" Grid.Column="5" Text="Status"/>
-                        <TextBlock Style="{ThemeResource CaptionTextBlockStyle}" Grid.Column="6" Text="New URL"/>
+                        <TextBlock Style="{ThemeResource CaptionTextBlockStyle}" Grid.Column="0" 
+                                   Text="Text" ToolTipService.ToolTip="The text that is linked"/>
+                        <TextBlock Style="{ThemeResource CaptionTextBlockStyle}" Grid.Column="1" 
+                                   Text="Old URL" ToolTipService.ToolTip="The original URL"/>
+                        <TextBlock Style="{ThemeResource CaptionTextBlockStyle}" Grid.Column="2" 
+                                   Text="Update" ToolTipService.ToolTip="Update URL in source?"/>
+                        <TextBlock Style="{ThemeResource CaptionTextBlockStyle}" Grid.Column="3" 
+                                   Text="Mark" ToolTipService.ToolTip="Mark link in source?"/>
+                        <TextBlock Style="{ThemeResource CaptionTextBlockStyle}" Grid.Column="4" 
+                                   Text="Result" ToolTipService.ToolTip="The result of the check"/>
+                        <TextBlock Style="{ThemeResource CaptionTextBlockStyle}" Grid.Column="5" 
+                                   Text="Status" ToolTipService.ToolTip="The HTTP-status code after check"/>
+                        <TextBlock Style="{ThemeResource CaptionTextBlockStyle}" Grid.Column="6" 
+                                   Text="New URL" ToolTipService.ToolTip="The URL that was redirected to"/>
                     </Grid>
                 </DataTemplate>
             </ListView.HeaderTemplate>
@@ -53,25 +60,40 @@
                             <ColumnDefinition Width="50" />
                             <ColumnDefinition />
                         </Grid.ColumnDefinitions>
-                        <TextBlock Grid.Column="0" Text="{x:Bind LinkText, Mode=OneWay}"/>
-                        <HyperlinkButton Grid.Column="1" Content="{x:Bind OriginalLink, Mode=OneWay}" Click="ClickLink" ToolTipService.ToolTip="{x:Bind OriginalLink, Mode=OneWay}" />
-                        <CheckBox Grid.Column="2" IsChecked="{x:Bind SelectForUpdate, Mode=TwoWay}"/>
-                        <CheckBox Grid.Column="3" IsChecked="{x:Bind SelectForInvalidMark, Mode=TwoWay}"/>
-                        <TextBlock Grid.Column="4" Text="{x:Bind Result, Converter={StaticResource ResultToDisplay}, Mode=OneWay}"/>
-                        <TextBlock Grid.Column="5" Text="{x:Bind HttpStatus, Mode=OneWay}"/>
-                        <HyperlinkButton Grid.Column="6" Content="{x:Bind LinkAfterRedirect, Mode=OneWay}" Click="ClickLink" ToolTipService.ToolTip="{x:Bind LinkAfterRedirect, Mode=OneWay}"/>
+                        <TextBlock Grid.Column="0" Text="{x:Bind LinkText, Mode=OneWay}" 
+                                   Margin="0,0,2,0" VerticalAlignment="Center"/>
+                        <HyperlinkButton Grid.Column="1" Content="{x:Bind OriginalLink, Mode=OneWay}" 
+                                    Margin="2,0" VerticalAlignment="Center"
+                                    Click="ClickLink" ToolTipService.ToolTip="{x:Bind OriginalLink, Mode=OneWay}" />
+                        <CheckBox Grid.Column="2" IsChecked="{x:Bind SelectForUpdate, Mode=TwoWay}" 
+                                  Margin="2,0,0,0" VerticalAlignment="Center"/>
+                        <CheckBox Grid.Column="3" IsChecked="{x:Bind SelectForInvalidMark, Mode=TwoWay}" 
+                                  Margin="0,0,2,0" VerticalAlignment="Center"/>
+                        <TextBlock Grid.Column="4" Text="{x:Bind Result, Converter={StaticResource ResultToDisplay}, Mode=OneWay}" 
+                                   Margin="0,0,2,0" VerticalAlignment="Center"/>
+                        <TextBlock Grid.Column="5" Text="{x:Bind HttpStatus, Mode=OneWay}" 
+                                   Margin="2,0" VerticalAlignment="Center" Foreground="Gray"/>
+                        <HyperlinkButton Grid.Column="6" Content="{x:Bind LinkAfterRedirect, Mode=OneWay}" 
+                                    Margin="2,0,0,0" VerticalAlignment="Center"
+                                    Click="ClickLink" ToolTipService.ToolTip="{x:Bind LinkAfterRedirect, Mode=OneWay}"/>
                     </Grid>
 
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
 
-        <TextBlock Grid.Row="1" x:Name="MessageLabel" Margin="10,2,2,2"/>
+        <TextBlock Grid.Row="1" x:Name="MessageLabel" Margin="10,2,2,2" Foreground="#606060"/>
 
         <StackPanel Orientation="Horizontal" Grid.Row="2">
-            <Button Content="Rescan timeouts" ToolTipService.ToolTip="Rescan any timeout results - maybe the server is awake now" Click="RescanList" Margin="5,2"/>
-            <Button Content="Update links in source" ToolTipService.ToolTip="Update the source for errors and simple redirects" Click="UpdateSource" Margin="5,2"/>
-            <Button Content="Back" Click="BackToMain"/>
+            <Button Content="Rescan timeouts" 
+                    ToolTipService.ToolTip="Rescan any timeout results - maybe the server is awake now" 
+                    Click="RescanList" Margin="5,2"/>
+            <Button Content="Update links in source" 
+                    ToolTipService.ToolTip="Update the source according to the 'update' and 'mark' checks" 
+                    Click="UpdateSource" Margin="5,2"/>
+            <Button Content="Back" 
+                    ToolTipService.ToolTip="Go back to the source view"
+                    Click="BackToMain"/>
         </StackPanel>
 
     </Grid>
